# MEMOserv

./: .gitignore  Cargo.toml  Readme.md  app.yaml  memo.json  wasmer.toml
src/: Auth.rs  engine.rs  hteapot.rs  main.rs
src/memodb/: collection.rs  dataType.rs  data_type.rs  finder.rs  fs.rs  mod.rs  util.rs
